# ohara

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  docs.yml  perf.yml  probe-coreml-link.yml  release.yml
crates/ohara-cli/: Cargo.toml  build.rs
crates/ohara-cli/src/: lib.rs  main.rs  perf_trace.rs  progress.rs  resources.rs
crates/ohara-cli/src/commands/: daemon.rs  explain.rs  index.rs  init.rs  mod.rs  plan.rs  plan_summary.rs  provider.rs  query.rs  serve.rs  status.rs  update.rs
crates/ohara-cli/src/commands/plan/: summary.rs
crates/ohara-cli/tests/: e2e_explain.rs  e2e_find_pattern.rs  e2e_incremental.rs  e2e_init.rs  e2e_rerank.rs  index_smoke.rs  plan_26_ignore_e2e.rs  plan_26_plan_command_e2e.rs  plan_27_embed_cache_e2e.rs  plan_28_parallel_indexer_e2e.rs
crates/ohara-core/: Cargo.toml
crates/ohara-core/src/: diff_text.rs  embed.rs  error.rs  explain.rs  hunk_attribution.rs  hunk_text.rs  ignore.rs  index_metadata.rs  indexer.rs  lib.rs  paths.rs  perf_trace.rs  query.rs  query_understanding.rs  retriever.rs  storage.rs  types.rs
crates/ohara-core/src/explain/: hydrator.rs  mod.rs  tests.rs
crates/ohara-core/src/indexer/: coordinator.rs
crates/ohara-core/src/indexer/coordinator/: actor.rs  mod.rs  tests.rs
crates/ohara-core/src/indexer/stages/: attribute.rs  commit_walk.rs  embed.rs  hunk_chunk.rs  mod.rs  persist.rs  test_helpers.rs
crates/ohara-core/src/retriever/: coordinator.rs  mod.rs  ranking.rs  rerank.rs  weights.rs
crates/ohara-core/src/retriever/lanes/: bm25_head_sym.rs  bm25_hist_sym.rs  bm25_sem_text.rs  bm25_text.rs  mod.rs  vec.rs
crates/ohara-core/src/retriever/refiners/: cross_encoder.rs  mod.rs  recency.rs
crates/ohara-core/src/retriever/tests/: fakes.rs  mod.rs  pipeline.rs  recency.rs  truncate.rs
crates/ohara-embed/: Cargo.toml  build.rs
crates/ohara-embed/src/: fastembed.rs  lib.rs
crates/ohara-engine/: Cargo.toml
crates/ohara-engine/src/: engine.rs  engine_tests.rs  error.rs  handle.rs  lib.rs  registry.rs  runtime_metadata.rs  server.rs
crates/ohara-engine/src/cache/: blame.rs  embedding.rs  meta.rs  mod.rs
crates/ohara-engine/src/client/: discover.rs  mod.rs  spawn.rs  transport.rs  try_call.rs
crates/ohara-engine/src/ipc/: envelope.rs  frame.rs  mod.rs
crates/ohara-engine/tests/: daemon_e2e_fallback.rs  daemon_e2e_happy.rs
crates/ohara-git/: Cargo.toml
crates/ohara-git/src/: blame.rs  diff.rs  lib.rs  walker.rs
crates/ohara-mcp/: Cargo.toml
crates/ohara-mcp/src/: lib.rs  main.rs  server.rs
crates/ohara-mcp/src/tools/: explain_change.rs  find_pattern.rs  mod.rs
crates/ohara-mcp/tests/: envelope_parity.rs
crates/ohara-mcp/tests/fixtures/: explain_change.golden.json  find_pattern.golden.json
crates/ohara-parse/: Cargo.toml
crates/ohara-parse/queries/: java.scm  javascript.scm  kotlin.scm  python.scm  rust.scm  typescript.scm
crates/ohara-parse/src/: chunker.rs  java.rs  kotlin.rs  lib.rs  python.rs  rust.rs
crates/ohara-parse/src/languages/: java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/ohara-storage/: Cargo.toml
crates/ohara-storage/migrations/: V1__initial.sql  V2__fts_text_and_symbol_name.sql  V3__index_metadata.sql  V4__historical_symbol_attribution.sql  V5__chunk_embed_cache.sql  V6__commit_ulid.sql
crates/ohara-storage/src/: commit.rs  explain.rs  hunk.rs  lib.rs  metrics.rs  migrations.rs  pool.rs  repo.rs  storage_impl.rs  symbol.rs  vec_codec.rs
crates/ohara-storage/src/codec/: mod.rs  pool.rs  row_codec.rs  vec_codec.rs
crates/ohara-storage/src/tables/: blob_cache.rs  commit.rs  embed_cache.rs  explain.rs  hunk.rs  hunk_symbol.rs  index_metadata.rs  mod.rs  symbol.rs
docs-book/: book.toml
docs-book/src/: SUMMARY.md  changelog.md  claude-code-plugin.md  claude-code.md  contributing.md  install.md  introduction.md  mcp-clients.md  quickstart.md  roadmap.md
docs-book/src/architecture/: indexing.md  languages.md  overview.md  retrieval-pipeline.md  storage.md
docs-book/src/cli/: explain.md  index.md  init.md  query.md  status.md  update.md
docs-book/src/tools/: explain_change.md  find_pattern.md
docs/perf/: v0.6-baseline.md  v0.6.1-leak-diagnosis.md
docs/refactor-todos/: README.md  task-06-schema-migration.md  task-07-repo-crud.md  task-08-put-commit.md  task-09-hunks-knn.md  task-10-fastembed.md  task-11-git-walker.md  task-12-diff-commitsource.md  task-13-tree-sitter.md  task-14-find-pattern.md  task-15-cli-index.md  task-16-cli-query-status.md  task-17-mcp-skeleton.md  task-18-mcp-find-pattern.md  task-19-init-and-incremental.md  task-20-plan-3-retrieval-pipeline.md
docs/superpowers/plans/: 2026-04-30-ohara-plan-1-foundation-and-find-pattern.md  2026-05-01-ohara-plan-2-init-and-incremental.md  2026-05-01-ohara-plan-3-retrieval-pipeline.md  2026-05-01-ohara-plan-4-java-kotlin.md  2026-05-01-ohara-plan-5-explain-change.md  2026-05-01-ohara-plan-6-indexing-throughput.md  2026-05-02-ohara-plan-10-context-engine-evals.md  2026-05-02-ohara-plan-11-historical-symbol-attribution.md  2026-05-02-ohara-plan-12-query-understanding-and-explain-enrichment.md  2026-05-02-ohara-plan-13-index-metadata-and-rebuild-safety.md  2026-05-02-ohara-plan-7-coreml-leak.md  2026-05-02-ohara-plan-8-multi-dist.md  2026-05-04-ohara-plan-16-serve-daemon.md  (+15 more)
fixtures/: README.md  build_medium.sh  build_tiny.sh
fixtures/medium/: .fixture-sha
plugins/ohara/: .mcp.json  README.md  package.json
tests/perf/: Cargo.toml  README.md  build_context_eval_fixture.sh  cli_query_bench.rs  context_engine_eval.rs  coreml_leak_repro.rs  embed_batch_micro.rs  embed_cache_sweep.rs  embed_provider_paired.rs  example_paired.rs  fetch_questdb.sh  index_bench.rs  mcp_query_bench.rs  parallel_indexer_sweep.rs  perf_diff.rs  quest_db_baseline.rs  rerank_pool_sweep.rs  symbol_bm25_fan_out.rs
tests/perf/baselines/: rerank_pool_sweep.jsonl
tests/perf/fixtures/context_engine_eval/: README.md  golden.jsonl
tests/perf/src/: lib.rs
(+17 files in other folders)
