[workspace]
resolver = "2"
members = [
  "crates/ohara-core",
  "crates/ohara-storage",
  "crates/ohara-embed",
  "crates/ohara-git",
  "crates/ohara-parse",
  "crates/ohara-cli",
  "crates/ohara-mcp",
  "tests/perf",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
version = "0.6.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vss96/ohara"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util", "signal", "sync"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
deadpool-sqlite = "0.8"
rusqlite = { version = "0.31", features = ["bundled", "load_extension", "blob"] }
sqlite-vec = "0.1"
refinery = { version = "0.8", features = ["rusqlite"] }
fastembed = "~4.9"
git2 = { version = "0.18", default-features = false }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-kotlin = "0.3"
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "=0.1.5", features = ["server", "transport-io"] }
schemars = "0.8"
indicatif = "0.17"
# Pinned to 0.3.9: it tracks indicatif 0.17 (matches our workspace pin).
# 0.3.10+ pulls in indicatif 0.18, which would force a separate upgrade.
tracing-indicatif = "=0.3.9"
axoupdater = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
