[package]
name = "ohara-cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "ohara CLI — index and query a context lineage engine"

[[bin]]
name = "ohara"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
ohara-core = { path = "../ohara-core" }
ohara-storage = { path = "../ohara-storage" }
ohara-embed = { path = "../ohara-embed" }
ohara-engine = { path = "../ohara-engine" }
ohara-git = { path = "../ohara-git" }
ohara-parse = { path = "../ohara-parse" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
axoupdater.workspace = true
git2.workspace = true
indicatif.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-indicatif.workspace = true

[features]
default = []
# Pass-through to ohara-embed: enable hardware execution providers.
# `cargo build --release --features coreml` (Apple Silicon) or
# `cargo build --release --features cuda` (Linux x86_64 + NVIDIA).
coreml = ["ohara-embed/coreml"]
cuda = ["ohara-embed/cuda"]

[dev-dependencies]
tempfile = "3"
