[package]
name = "ohara-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
async-trait = "0.1"
git2.workspace = true
# `macros` for tokio::join! in the retrieval lanes.
# `rt` + `sync` added for plan-28 actor pipeline (tokio::spawn,
# tokio::sync::mpsc, tokio::sync::Mutex). `rt` enables task spawning;
# the test binary still owns the multi-thread runtime.
tokio = { version = "1", features = ["macros", "rt", "sync"] }
futures.workspace = true
ignore = { workspace = true }
ulid.workspace = true
num_cpus.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber.workspace = true
tempfile = { workspace = true }
