[package]
name = "ohara-embed"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ohara-core = { path = "../ohara-core" }
anyhow.workspace = true
fastembed.workspace = true
async-trait = "0.1"
tokio = { workspace = true }
tracing.workspace = true

# Optional ONNX Runtime direct dep — only pulled in when a hardware
# execution-provider feature is enabled. Pinned to fastembed 4.9's
# transitive ort version so ExecutionProviderDispatch stays compatible.
#
# Per-target wiring: macOS adds the `coreml` feature so `--features
# coreml` (the cargo-dist released-binary flag) wires the CoreML EP.
# Other targets get the bare crate so they compile cleanly when
# cargo-dist's workspace-wide `features = ["coreml"]` is forwarded
# to them — `coreml` becomes a no-op there. CUDA flows independently
# via the `cuda` feature below.
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.9", optional = true, features = ["coreml"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { version = "=2.0.0-rc.9", optional = true }

[features]
default = []
# Enable CoreML execution provider (Apple Silicon Neural Engine + GPU).
# Requires CoreML.framework at build time — only does anything on macOS;
# on Linux the target-conditional ort dep above strips the coreml feature
# so the build is clean (and no extra ort weight is added).
coreml = ["dep:ort"]
# Enable CUDA execution provider. Requires CUDA toolkit at build time —
# Linux x86_64 (and Windows) hosts with NVIDIA GPUs only.
cuda = ["dep:ort", "ort/cuda"]
