[package]
name = "ohara-engine"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ohara-core = { path = "../ohara-core" }
ohara-storage = { path = "../ohara-storage" }
ohara-embed = { path = "../ohara-embed" }
ohara-git = { path = "../ohara-git" }
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
git2.workspace = true
async-trait.workspace = true
ohara-parse = { path = "../ohara-parse" }

[features]
default = []
coreml = ["ohara-embed/coreml"]
cuda = ["ohara-embed/cuda"]
