[package]
name = "ohara-engine"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ohara-core = { path = "../ohara-core" }
ohara-storage = { path = "../ohara-storage" }
ohara-embed = { path = "../ohara-embed" }
ohara-git = { path = "../ohara-git" }
ohara-parse = { path = "../ohara-parse" }
blake3.workspace = true
chrono.workspace = true
lru.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
git2.workspace = true
async-trait.workspace = true

[features]
default = []
coreml = ["ohara-embed/coreml"]
cuda = ["ohara-embed/cuda"]
