[package]
name = "ohara-mcp"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "ohara MCP server — exposes context lineage tools to Claude Code"

[lib]
name = "ohara_mcp"
path = "src/lib.rs"

[[bin]]
name = "ohara-mcp"
path = "src/main.rs"

[dependencies]
ohara-core = { path = "../ohara-core" }
ohara-engine = { path = "../ohara-engine" }
ohara-storage = { path = "../ohara-storage" }
ohara-embed = { path = "../ohara-embed" }
ohara-git = { path = "../ohara-git" }
# Plan 13: read parser_versions() and CHUNKER_VERSION when building
# the MCP server's runtime compatibility expectation.
ohara-parse = { path = "../ohara-parse" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
git2.workspace = true
async-trait.workspace = true

[features]
default = []
# Pass-through to ohara-embed: enable hardware execution providers for
# the MCP server's embedder + reranker (the FastEmbedReranker pinned to
# OharaServer at startup goes faster on Apple Neural Engine / NVIDIA).
coreml = ["ohara-embed/coreml"]
cuda = ["ohara-embed/cuda"]
