[package]
name = "ohara-parse"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ohara-core = { path = "../ohara-core" }
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tracing.workspace = true
