[package]
name = "ohara-parse"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ohara-core = { path = "../ohara-core" }
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-java.workspace = true
tree-sitter-kotlin-ng.workspace = true
tracing.workspace = true
async-trait = "0.1"
tokio.workspace = true
git2.workspace = true
