[package]
name = "ohara-storage"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ohara-core = { path = "../ohara-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
deadpool-sqlite.workspace = true
rusqlite.workspace = true
sqlite-vec.workspace = true
refinery.workspace = true
async-trait = "0.1"
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
