[package]
name = "ohara-perf-tests"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish = false

# This crate exists only to host the workspace's #[ignore]'d perf
# benchmarks (Plan 6 Task 1). It has no library or binary surface —
# all targets live under `tests/`. The lib stub is empty so cargo
# still recognises the package.
[lib]
path = "src/lib.rs"

[[test]]
name = "quest_db_baseline"
path = "quest_db_baseline.rs"

[[test]]
# Plan 6 Task 2.1 paired-flag skeleton. The file itself is gated
# behind `#![cfg(any())]` so it compiles to an empty translation
# unit until a real Phase 2 flag copies it and drops the cfg.
name = "example_paired"
path = "example_paired.rs"

[[test]]
# Plan 6 Task 3.3 — paired e2e for `--embed-provider`, the first
# real consumer of the paired-flag skeleton above. Both tests are
# `#[ignore]`'d for the same reason the rest of this directory is.
name = "embed_provider_paired"
path = "embed_provider_paired.rs"

[dev-dependencies]
ohara-cli = { path = "../../crates/ohara-cli" }
ohara-core = { path = "../../crates/ohara-core" }
ohara-embed = { path = "../../crates/ohara-embed" }
ohara-storage = { path = "../../crates/ohara-storage" }
anyhow.workspace = true
chrono.workspace = true
tempfile = "3"
tokio = { workspace = true }
tracing.workspace = true
