[package]
name = "ohara-perf-tests"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish = false

# This crate exists only to host the workspace's #[ignore]'d perf
# benchmarks (Plan 6 Task 1). It has no library or binary surface —
# all targets live under `tests/`. The lib stub is empty so cargo
# still recognises the package.
[lib]
path = "src/lib.rs"

[[test]]
name = "quest_db_baseline"
path = "quest_db_baseline.rs"

[[test]]
# Plan 6 Task 2.1 paired-flag skeleton. The file itself is gated
# behind `#![cfg(any())]` so it compiles to an empty translation
# unit until a real Phase 2 flag copies it and drops the cfg.
name = "example_paired"
path = "example_paired.rs"

[[test]]
# Plan 6 Task 3.3 — paired e2e for `--embed-provider`, the first
# real consumer of the paired-flag skeleton above. Both tests are
# `#[ignore]`'d for the same reason the rest of this directory is.
name = "embed_provider_paired"
path = "embed_provider_paired.rs"

[[test]]
# Plan 7 Task 1.1 — minimal CoreML memory-leak reproduction harness.
# `#[ignore]`'d; requires the `ohara-embed/coreml` feature. See the
# file-level docs for build / run / sampling commands.
name = "coreml_leak_repro"
path = "coreml_leak_repro.rs"

[[test]]
# Plan 10 Task 2.1 — context-engine retrieval-quality runner. `#[ignore]`'d;
# opt in via:
#   cargo test -p ohara-perf-tests -- --ignored context_engine_eval --nocapture
name = "context_engine_eval"
path = "context_engine_eval.rs"

[[test]]
# Plan 23 Task A.1 — rerank-pool sweep over the context-engine eval
# fixture. `#[ignore]`'d; opt in via:
#   cargo test -p ohara-perf-tests -- --ignored rerank_pool_sweep --nocapture
name = "rerank_pool_sweep"
path = "rerank_pool_sweep.rs"
harness = true

[[test]]
# Plan 14 Task E.1 — CLI cold-path perf harness. `#[ignore]`'d; opt
# in via `cargo test -p ohara-perf-tests --release -- --ignored
# cli_query_bench --nocapture`.
name = "cli_query_bench"
path = "cli_query_bench.rs"

[[test]]
# Plan 14 Task E.2 — MCP in-process perf harness. Drives
# OharaService::find_pattern + explain_change directly without rmcp
# framing so we measure server-side latency only.
name = "mcp_query_bench"
path = "mcp_query_bench.rs"

[[test]]
# Plan 14 Task E.3 — perf-run differ. Reads two JSON reports written
# by cli_query_bench / mcp_query_bench (paths via env vars
# OHARA_PERF_DIFF_BEFORE / OHARA_PERF_DIFF_AFTER) and prints a
# side-by-side delta. Operators paste the output into PR descriptions.
name = "perf_diff"
path = "perf_diff.rs"

[[test]]
# Plan 27 Task E.2 — embed-cache sweep: runs `ohara index` with
# --embed-cache off|semantic|diff and reports wall-time + cache row
# counts side-by-side. `#[ignore]`'d; opt in via:
#   cargo test -p ohara-perf-tests --release -- \
#       --ignored embed_cache_sweep --nocapture
name = "embed_cache_sweep"
path = "embed_cache_sweep.rs"

[[test]]
# Plan 15 Task A.2 — indexing-path peak-RSS + wall-clock harness.
# `#[ignore]`'d; opt in via:
#   cargo test -p ohara-perf-tests --release -- \
#       --ignored index_bench --nocapture
name = "index_bench"
path = "index_bench.rs"

[[test]]
# Plan 28 Task E.1 — parallel-indexer --workers sweep. Runs `ohara
# index` with --workers 1|2|4|8 and reports wall-time side-by-side.
# `#[ignore]`'d; opt in via:
#   cargo test -p ohara-perf-tests --release -- \
#       --ignored parallel_indexer_sweep --nocapture
name = "parallel_indexer_sweep"
path = "parallel_indexer_sweep.rs"

[[test]]
# Issue #57 — symbol-name BM25 lane high-fan-out microbench. Builds a
# synthetic 100-file × 50-hunk fixture in a temp SQLite DB and times
# bm25_hunks_by_symbol_name to validate the LIMIT bound. `#[ignore]`'d;
# opt in via:
#   cargo test -p ohara-perf-tests --release -- \
#       --ignored symbol_bm25_fan_out --nocapture
name = "symbol_bm25_fan_out"
path = "symbol_bm25_fan_out.rs"

[[test]]
# Issue #56 — embed-batch microbench. Times `embed_batch` at varying
# per-call sizes against BGE-small to surface the saturation curve
# without indexer/git/storage overhead. `#[ignore]`'d; opt in via:
#   cargo test -p ohara-perf-tests --release -- \
#       --ignored embed_batch_micro --nocapture
name = "embed_batch_micro"
path = "embed_batch_micro.rs"

[dependencies]
libc.workspace = true

[dev-dependencies]
ohara-cli = { path = "../../crates/ohara-cli" }
ohara-core = { path = "../../crates/ohara-core" }
ohara-embed = { path = "../../crates/ohara-embed" }
ohara-mcp = { path = "../../crates/ohara-mcp" }
ohara-storage = { path = "../../crates/ohara-storage" }
anyhow.workspace = true
chrono.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tempfile = "3"
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
